[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "delivery-tracking"
version = "1.0.0"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---------------------------------------------------------------------------
# pytest configuration
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-branch --cov-report=term-missing"
filterwarnings = ["ignore::DeprecationWarning"]

# ---------------------------------------------------------------------------
# coverage configuration
# ---------------------------------------------------------------------------

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
omit = ["app/seed.py"]
show_missing = true
